--- a/pci/Cargo.toml
+++ b/pci/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2018"
 [dependencies]
 vm-allocator = { path = "../vm-allocator" }
 byteorder = "*"
-devices = { path = "../devices" }
 kvm-bindings = "0.1"
 kvm-ioctls = "0.1.0"
 libc = ">=0.2.39"
 log = "*"
+vm-device = { path = "../vm-device" }
 vm-memory = { git = "https://github.com/rust-vmm/vm-memory" }
 vmm-sys-util = { git = "https://github.com/liujing2/vmm-sys-util" }
